--- a/Estilos.css
+++ b/Estilos.css
@@ -156,7 +156,7 @@ body {
 
     .cc {
         width: 100%;
-        display: flex;
+        display: block;
         align-items: center;
         justify-content: center;
         text-align: left;
