--- a/Estilos.css
+++ b/Estilos.css
@@ -76,10 +76,6 @@ footer {
     width: 60%;
 }
 
-.imgcss {
-    height: 11.25rem;
-}
-
 blockquote {
     margin: 0;
     padding: 0;
@@ -160,16 +156,16 @@ body {
         align-items: center;
         justify-content: center;
         text-align: left;
-        margin: 0 0 0.625rem 0;
+        margin: 0 0 1rem 0;
         font-size: 1rem;
     }
 
     .cc img {
-        width: 15%;
+        width: 30%;
         min-width: 3.75rem;
         margin-right: 1.25rem;
     }
-    /*
+/*
     .contenedor {
         display: flex;
         align-items: stretch;
@@ -191,6 +187,15 @@ body {
         font-size: 0.875rem;
     }
 
+    footer {
+        padding: 1.875rem 0 0.625rem 0;
+    }
+
+    footer li {
+        display: block;
+        margin: 0.3125rem 0;
+    }
+}
     footer {
         padding: 1.875rem 0 0.625rem 0;
     }
